--- a/style.css
+++ b/style.css
@@ -23,3 +23,31 @@
 #darkMode{
     width: 60px;
 }
+#progress{
+    height: calc(100vh - 300px);
+    overflow: auto;
+    
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 6px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: 0 0 0px 1px rgb(204, 204, 204); 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(39, 39, 39); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #21a5f1; 
+  }
